--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,7 +11,7 @@ pydantic==2.5.0
 pydantic-settings==2.1.0
 requests==2.31.0
 scapy==2.5.0
-nmap==7.94
+python-nmap==0.7.1
 websockets==12.0
 pytest==7.4.3
 pytest-asyncio==0.21.1
